--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 <h3>Resultado:</h3>
 <ol id="resultado"></ol>
 
-<script src="script.js"></script>
+<script src="script2.js"></script>
 </body>
 </html>
