--- a/index.html
+++ b/index.html
@@ -1,36 +1,81 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Rota Certa</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 600px;
-      margin: auto;
-    }
-    input, button {
-      width: 100%;
-      padding: 8px;
-      margin: 6px 0;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Calcular Rota</title>
+
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background: #f2f2f2;
+            padding: 40px;
+        }
+
+        .container {
+            max-width: 400px;
+            background: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+
+        h1 {
+            text-align: center;
+        }
+
+        input {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            font-size: 16px;
+        }
+
+        button {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            background: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background: #0056b3;
+        }
+
+        #resultado {
+            margin-top: 15px;
+            font-size: 16px;
+        }
+    </style>
 </head>
+
 <body>
 
-<h2>Rota Certa – Planejador de Visitas</h2>
+    <div class="container">
+        <h1>Calcular Rota</h1>
 
-<label>Quantos endereços deseja inserir? (máx. 50)</label>
-<input type="number" id="qtd" min="1" max="50">
-<button onclick="gerarCampos()">Criar campos</button>
+        <input 
+            type="text" 
+            id="origem" 
+            placeholder="Digite a origem (ex: Porto Alegre, RS)"
+        >
 
-<div id="enderecos"></div>
+        <input 
+            type="text" 
+            id="destino" 
+            placeholder="Digite o destino (ex: Canoas, RS)"
+        >
 
-<button onclick="calcularRota()">Calcular rota</button>
+        <button onclick="calcularRota()">Calcular rota</button>
 
-<h3>Resultado:</h3>
-<ol id="resultado"></ol>
+        <div id="resultado"></div>
+    </div>
 
-<script src="script2.js"></script>
+    <!-- IMPORTANTE: script SEMPRE no final -->
+    <script src="script.js"></script>
+
 </body>
 </html>
