--- a/index.html
+++ b/index.html
@@ -1,81 +1,54 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Calcular Rota</title>
+  <meta charset="UTF-8">
+  <title>Rota de Visitas</title>
 
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            background: #f2f2f2;
-            padding: 40px;
-        }
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      max-width: 600px;
+      margin: auto;
+      padding: 20px;
+      background: #f4f4f4;
+    }
 
-        .container {
-            max-width: 400px;
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
+    input, button {
+      width: 100%;
+      margin: 5px 0;
+      padding: 8px;
+      font-size: 16px;
+    }
 
-        h1 {
-            text-align: center;
-        }
+    .endereco {
+      margin-bottom: 5px;
+    }
 
-        input {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            font-size: 16px;
-        }
-
-        button {
-            width: 100%;
-            padding: 10px;
-            font-size: 16px;
-            background: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background: #0056b3;
-        }
-
-        #resultado {
-            margin-top: 15px;
-            font-size: 16px;
-        }
-    </style>
+    button {
+      cursor: pointer;
+    }
+  </style>
 </head>
 
 <body>
 
-    <div class="container">
-        <h1>Calcular Rota</h1>
+  <h2>Rota de Visitas</h2>
 
-        <input 
-            type="text" 
-            id="origem" 
-            placeholder="Digite a origem (ex: Porto Alegre, RS)"
-        >
+  <label for="qtd">Quantos endereços? (até 50)</label>
+  <input type="number" id="qtd" min="1" max="50" value="2">
 
-        <input 
-            type="text" 
-            id="destino" 
-            placeholder="Digite o destino (ex: Canoas, RS)"
-        >
+  <button type="button" onclick="gerarCampos()">Gerar campos</button>
 
-        <button onclick="calcularRota()">Calcular rota</button>
+  <!-- Aqui o JS vai inserir os inputs -->
+  <div id="enderecos"></div>
 
-        <div id="resultado"></div>
-    </div>
+  <button type="button" onclick="calcularRota()">Calcular rota</button>
 
-    <!-- IMPORTANTE: script SEMPRE no final -->
-    <script src="script.js"></script>
+  <h3>Resultado:</h3>
+  <ol id="resultado"></ol>
+
+  <!-- Script SEMPRE no final -->
+  <script src="script.js"></script>
 
 </body>
 </html>
