Replace script.js with script2.js

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <ol id="resultado"></ol>
 
   <!-- Script SEMPRE no final -->
-  <script src="script.js"></script>
+  <script src="script2.js"></script>
 
 </body>
 </html>
