Add footer with developer credit

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
   <h3>Roteiro:</h3>
   <ol id="resultado"></ol>
 
+ <footer><h4>Desenvolvido por: Rafael Ferreira</h4>
+ </footer>
+  
   <!-- SCRIPT -->
   <script src="script.js"></script>
 
