Move footer content outside of footer tag

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
   <h3>Roteiro:</h3>
   <ol id="resultado"></ol>
 
- <footer><h4>Desenvolvido por: Rafael Ferreira</h4>
- </footer>
+ <h4>Desenvolvido por: Rafael Ferreira</h4>
   
   <!-- SCRIPT -->
   <script src="script.js"></script>
