--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <h3>Roteiro:</h3>
   <ol id="resultado"></ol>
-
+  <div><br></div>
   <br><br><br>
  <h4>Desenvolvido por: Rafael Ferreira</h4>
   
