--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Rota Certa</title>
+  <title>Rota Fácil</title>
 
   <style>
     body {
@@ -38,7 +38,7 @@
 
 <body>
 
-  <h2>Rota Certa</h2>
+  <h2>Rota Fácil</h2>
 
   <!-- PONTO DE PARTIDA -->
   <label for="origem"><strong>Ponto de partida</strong></label>
@@ -47,8 +47,8 @@
   <hr>
 
   <!-- QUANTIDADE DE PARADAS -->
-  <label for="qtd"><strong>Quantas paradas/destinos?</strong> (até 50)</label>
-  <input type="number" id="qtd" min="1" max="50" value="2">
+  <label for="qtd"><strong>Quantas paradas/destinos?</strong> (até 10)</label>
+  <input type="number" id="qtd" min="1" max="10" value="2">
 
   <button type="button" onclick="gerarCampos()">Gerar campos de destinos</button>
 
@@ -58,7 +58,7 @@
 
   <h3>Roteiro:</h3>
   <ol id="resultado"></ol>
-  <div><br></div>
+  <div><br><br><br></div>
   <br><br><br>
  <h4>Desenvolvido por: Rafael Ferreira</h4>
   
