--- a/index.html
+++ b/index.html
@@ -1,64 +1,39 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-<title>Roteirizador de Clientes</title>
-
+<title>Gerenciador de Rotas</title>
 <style>
-body {
-    font-family: Arial, sans-serif;
-    padding: 15px;
-}
-input, button, select {
-    padding: 8px;
-    margin: 5px 0;
-    width: 100%;
-}
-.destino {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-bottom: 8px;
-}
-#map {
-    width: 100%;
-    height: 350px;
-    margin-top: 10px;
-}
+body { font-family: Arial; padding: 10px; }
+input, button, select { margin: 5px 0; width: 100%; padding: 6px; }
+.destino { border: 1px solid #ccc; padding: 5px; margin-bottom: 5px; }
 </style>
 </head>
-
 <body>
 
-<h2>Roteirizador de Clientes</h2>
+<h2>Gerenciador de Rotas</h2>
 
 <button onclick="usarLocalizacao()">📍 Usar localização atual</button>
 <input type="text" id="origem" placeholder="Endereço de partida">
 
-<hr>
-
 <h3>Destinos</h3>
 <div id="destinos"></div>
+<button onclick="adicionarDestino()">➕ Adicionar destino</button>
 
-<button onclick="addDestino()">➕ Adicionar parada</button>
-<button onclick="criarRota()">🧭 Criar rota</button>
+<button onclick="criarRota()">🚗 Criar rota</button>
+<button onclick="adicionarParada()">➕ Adicionar parada durante trajeto</button>
 
-<hr>
-
-<h3>Salvar</h3>
+<h3>Salvar rota</h3>
 <input type="text" id="nomeRota" placeholder="Nome da rota">
 <button onclick="salvarRota()">💾 Salvar rota</button>
 
-<hr>
-
 <h3>Rotas salvas</h3>
-<select id="rotasSalvas" onchange="carregarRota()">
-<option value="">Selecione uma rota</option>
-</select>
+<select id="rotasSalvas"></select>
+<button onclick="carregarRota()">▶️ Iniciar rota salva</button>
 
-<div id="map"></div>
+<div id="map" style="width:100%;height:400px;margin-top:10px;"></div>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=SUA_CHAVE_AQUI&libraries=places"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=SUA_API_KEY"></script>
 <script src="script.js"></script>
-
 </body>
 </html>
