--- a/index.html
+++ b/index.html
@@ -1,187 +1,84 @@
-console.log("Rota Fácil PRO carregado");
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>Rota Fácil PRO</title>
 
-let origemAtual = null;
-let destinosGlobais = [];
-
-/* =========================
-   LOCALIZAÇÃO GPS PRECISA
-   ========================= */
-function usarLocalizacao() {
-  navigator.geolocation.getCurrentPosition(
-    pos => {
-      origemAtual = {
-        lat: pos.coords.latitude,
-        lon: pos.coords.longitude,
-        texto: `${pos.coords.latitude},${pos.coords.longitude}`
-      };
-
-      document.getElementById("infoLocalizacao").innerText =
-        "📍 GPS ativo (alta precisão)";
-
-    },
-    err => alert("Erro ao obter localização"),
-    { enableHighAccuracy: true, timeout: 10000 }
-  );
-}
-
-/* =========================
-   CLIENTES
-   ========================= */
-function getClientes() {
-  return JSON.parse(localStorage.getItem("clientes") || "[]");
-}
-
-function salvarClientes() {
-  const clientes = getClientes();
-  document.querySelectorAll(".destino").forEach(b => {
-    const nome = b.querySelector(".nome").value.trim();
-    const endereco = b.querySelector(".endereco").value.trim();
-    if (!endereco) return;
-
-    if (!clientes.some(c => c.endereco === endereco)) {
-      clientes.push({ nome, endereco });
+  <style>
+    body {
+      font-family: Arial;
+      max-width: 760px;
+      margin: auto;
+      padding: 20px;
+      background: #f4f4f4;
     }
-  });
 
-  localStorage.setItem("clientes", JSON.stringify(clientes));
-  alert("Clientes salvos");
-}
+    h2 { text-align: center; }
 
-/* =========================
-   GERAR CAMPOS
-   ========================= */
-function gerarCampos() {
-  const qtd = +document.getElementById("qtd").value;
-  const div = document.getElementById("enderecos");
-  div.innerHTML = "";
+    input, button, select {
+      width: 100%;
+      margin: 6px 0;
+      padding: 10px;
+      font-size: 15px;
+    }
 
-  const clientes = getClientes();
+    button { cursor: pointer; }
 
-  for (let i = 0; i < qtd; i++) {
-    const d = document.createElement("div");
-    d.className = "destino";
+    .box {
+      background: #fff;
+      padding: 15px;
+      margin-bottom: 15px;
+      border-radius: 6px;
+    }
 
-    const sel = document.createElement("select");
-    sel.innerHTML = `<option value="">Selecionar cliente salvo</option>`;
-    clientes.forEach(c => {
-      sel.innerHTML += `<option value="${c.endereco}">${c.nome || c.endereco}</option>`;
-    });
+    .destino {
+      border-bottom: 1px solid #ddd;
+      padding-bottom: 10px;
+      margin-bottom: 10px;
+    }
 
-    const end = document.createElement("input");
-    end.className = "endereco";
-    end.placeholder = "Endereço";
+    .rotaSalva {
+      border-bottom: 1px dashed #ccc;
+      padding: 6px 0;
+    }
+  </style>
+</head>
 
-    sel.onchange = () => end.value = sel.value;
+<body>
 
-    const nome = document.createElement("input");
-    nome.className = "nome";
-    nome.placeholder = "Nome do cliente (opcional)";
+<h2>🚗 Rota Fácil PRO</h2>
 
-    d.append(sel, end, nome);
-    div.appendChild(d);
-  }
-}
+<div class="box">
+  <strong>Ponto de partida</strong>
+  <input type="text" id="origem" placeholder="Digite o ponto de partida">
+  <button onclick="usarLocalizacao()">📍 Usar minha localização (GPS)</button>
+  <small id="infoLocalizacao"></small>
+</div>
 
-/* =========================
-   GEO + DISTÂNCIA
-   ========================= */
-async function geocodificar(txt) {
-  const url = `https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(txt)}`;
-  const r = await fetch(url);
-  const d = await r.json();
-  if (!d.length) throw new Error("Endereço não encontrado");
-  return { texto: txt, lat: +d[0].lat, lon: +d[0].lon };
-}
+<div class="box">
+  <strong>Quantas paradas?</strong>
+  <input type="number" id="qtd" min="1" max="10" value="2">
+  <button onclick="gerarCampos()">Gerar destinos</button>
+  <div id="enderecos"></div>
+  <button onclick="salvarClientes()">💾 Salvar endereços/clientes</button>
+</div>
 
-function distancia(a, b) {
-  const R = 6371;
-  const dLat = (b.lat - a.lat) * Math.PI / 180;
-  const dLon = (b.lon - a.lon) * Math.PI / 180;
-  const x =
-    Math.sin(dLat/2)**2 +
-    Math.cos(a.lat*Math.PI/180)*Math.cos(b.lat*Math.PI/180)*
-    Math.sin(dLon/2)**2;
-  return R * 2 * Math.atan2(Math.sqrt(x), Math.sqrt(1-x));
-}
+<div class="box">
+  <button onclick="calcularRota()">Calcular rota</button>
+  <button onclick="adicionarParadaAtual()">➕ Adicionar parada agora</button>
+  <button onclick="salvarRota()">⭐ Salvar esta rota</button>
+</div>
 
-function ordenar(origem, destinos) {
-  let atual = origem, rota = [], rest = [...destinos];
-  while (rest.length) {
-    let i = 0;
-    for (let j = 1; j < rest.length; j++)
-      if (distancia(atual, rest[j]) < distancia(atual, rest[i])) i = j;
-    atual = rest[i];
-    rota.push(rest.splice(i,1)[0]);
-  }
-  return rota;
-}
+<div class="box">
+  <h3>Roteiro</h3>
+  <ol id="resultado"></ol>
+</div>
 
-/* =========================
-   ROTA
-   ========================= */
-async function calcularRota() {
-  if (!origemAtual)
-    origemAtual = await geocodificar(document.getElementById("origem").value);
+<div class="box">
+  <h3>📂 Rotas salvas</h3>
+  <div id="listaRotas"></div>
+</div>
 
-  destinosGlobais = [];
-  for (let i of document.querySelectorAll(".endereco"))
-    if (i.value) destinosGlobais.push(await geocodificar(i.value));
-
-  const rota = ordenar(origemAtual, destinosGlobais);
-
-  const o = encodeURIComponent(origemAtual.texto);
-  const d = encodeURIComponent(rota.at(-1).texto);
-  const w = rota.slice(0,-1).map(r => encodeURIComponent(r.texto)).join("|");
-
-  let url = `https://www.google.com/maps/dir/?api=1&origin=${o}&destination=${d}&travelmode=driving`;
-  if (w) url += `&waypoints=${w}`;
-
-  document.getElementById("resultado").innerHTML =
-    `<li><a href="${url}" target="_blank">🚗 Abrir rota no Google Maps</a></li>`;
-}
-
-/* =========================
-   SALVAR / CARREGAR ROTAS
-   ========================= */
-function salvarRota() {
-  const nome = prompt("Nome da rota");
-  if (!nome) return;
-
-  const rotas = JSON.parse(localStorage.getItem("rotas") || "[]");
-  rotas.push({ nome, origem: origemAtual, destinos: destinosGlobais });
-  localStorage.setItem("rotas", JSON.stringify(rotas));
-  listarRotas();
-}
-
-function listarRotas() {
-  const div = document.getElementById("listaRotas");
-  const rotas = JSON.parse(localStorage.getItem("rotas") || "[]");
-  div.innerHTML = "";
-
-  rotas.forEach((r, i) => {
-    const d = document.createElement("div");
-    d.className = "rotaSalva";
-    d.innerHTML = `
-      <strong>${r.nome}</strong>
-      <button onclick="iniciarRota(${i})">▶ Iniciar</button>
-      <button onclick="excluirRota(${i})">🗑️</button>
-    `;
-    div.appendChild(d);
-  });
-}
-
-function iniciarRota(i) {
-  const r = JSON.parse(localStorage.getItem("rotas"))[i];
-  origemAtual = r.origem;
-  destinosGlobais = r.destinos;
-  calcularRota();
-}
-
-function excluirRota(i) {
-  const r = JSON.parse(localStorage.getItem("rotas"));
-  r.splice(i,1);
-  localStorage.setItem("rotas", JSON.stringify(r));
-  listarRotas();
-}
-
-listarRotas();
+<script src="script.js"></script>
+</body>
+</html>
