Update title and button text in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Rota Fácil PRO</title>
+  <title>Rota Fácil PRO1</title>
 
   <style>
     body {
@@ -51,7 +51,7 @@
 <div class="box">
   <strong>Ponto de partida</strong>
   <input type="text" id="origem" placeholder="Digite o ponto de partida">
-  <button onclick="usarLocalizacao()">📍 Usar minha localização (GPS)</button>
+  <button onclick="usarLocalizacao()">📍 Usar minha localização</button>
   <small id="infoLocalizacao"></small>
 </div>
 
