--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <body>
 
-<h2>🚗 Rota Fácil PRO 10</h2>
+<h2>🚗 Rota Fácil PRO11</h2>
 
 <div class="box">
   <strong>Ponto de partida</strong>
@@ -59,11 +59,11 @@
 </div>
 
 <div class="box">
-  <button onclick="calcularRota()">Calcular rota</button>
+  <button onclick="calcularRota()">Calcular rota otimizada</button>
 
   <strong>Adicionar nova parada durante a rota</strong>
   <input type="text" id="novaParada" placeholder="Digite o endereço da nova parada">
-  <button onclick="adicionarParada()">➕ Adicionar parada agora</button>
+  <button onclick="adicionarParada()">➕ Adicionar parada</button>
 
   <button onclick="salvarRota()">⭐ Salvar esta rota</button>
 </div>
