--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
       padding-bottom: 10px;
       margin-bottom: 10px;
     }
+
+    input.erro {
+  border: 2px solid #e74c3c;
+  background-color: #fff5f5;
+}
   </style>
 </head>
 
