--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ input.erro {
 
   <header class="app-header">
     <h1>🚗 Rota Fácil PRO</h1>
-    <span class="version">v1.3.2</span>
+    <span class="version">v1.3.3</span>
   </header>
 
   <!-- ORIGEM -->
@@ -207,7 +207,7 @@ input.erro {
   </section>
 
   <!-- RESULTADO -->
-  <section class="card">
+  <section class="card" id="secaoRoteiro">
     <h3>📍 Roteiro</h3>
     <ol id="resultado" class="resultado"></ol>
   </section>
