--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
       width: 100%;
     }
 
-    .btn.primary { background: var(--primary); color: #fff; }
+    .btn.primary { background: var(--primary); color: #fff; margin-bottom:5px; }
     .btn.secondary { background: var(--secondary); color: #fff; }
     .btn.success { background: var(--success); color: #064e3b; }
     .btn.danger { background: var(--danger); color: #fff; }
     .btn.star { background: #fab115; color: #422006; }
     .btn.ghost {
-      background: transparent;
+      background-color:#d6d4d4;
       border: 1px dashed #64748b;
       color: #334155;
     }
@@ -228,7 +228,7 @@
 
   <header class="app-header">
     <h1>🚗 Rota Fácil PRO</h1>
-    <span class="version">v1.3.4</span>
+    <span class="version">v1.3.5</span>
   </header>
 
   <!-- ORIGEM -->
