--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     .btn.danger { background: var(--danger); color: #fff; }
     .btn.star { background: #fab115; color: #422006; }
     .btn.ghost {
-      background-color:#d6d4d4;
+      background-color:#c4c2c2;
       border: 1px dashed #64748b;
       color: #334155;
     }
@@ -228,7 +228,7 @@
 
   <header class="app-header">
     <h1>🚗 Rota Fácil PRO</h1>
-    <span class="version">v1.3.5</span>
+    <span class="version">v1.3.4</span>
   </header>
 
   <!-- ORIGEM -->
