--- a/index.html
+++ b/index.html
@@ -228,7 +228,9 @@
 
   <header class="app-header">
     <h1>🚗 Rota Fácil PRO</h1>
+      <img src="img/logo_rota.png">
     <span class="version">v1.3.4</span>
+  
   </header>
 
   <!-- ORIGEM -->
