--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
   <header class="app-header">
     <h1>🚗 Rota Fácil PRO</h1>
-      <img src="img/logo_rota.png width="300" height="200"">
+      <img src="img/logo_rota.png" width="300" height="200">
     <span class="version">v1.3.4</span>
   
   </header>
