--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     :root {
       --bg: #0f172a;
       --card: #e1e4e9;
-      --input: #dbffe7;
+      --input: #f2f5f4;
       --primary: #428fc7;
       --secondary: #428fc7;
       --success: #22c55e;
@@ -226,7 +226,7 @@
   <header class="app-header">
       <img src="img/logo_rota.png" width="300">
     <br>
-    <span class="version">v1.3.9</span>
+    <span class="version">v1.4.0</span>
   </header>
 
   <!-- ORIGEM -->
