--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <h3>Paradas</h3>
 
     <label>Quantas paradas?</label>
-    <input type="number" id="qtd" min="1" max="10" value="2">
+    <input type="number" id="qtd" min="1" max="10" value="Digite o número de paradas">
 
     <button class="btn primary" onclick="gerarCampos()">➕ Gerar destinos</button>
 
